<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="info.covid.uicomponents.DateExtensionsKt" />

        <import type="android.view.View" />

        <import type="android.text.Html" />

        <variable
            name="viewModel"
            type="info.covid.dashboard.HomeViewModel" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/coordinator_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            app:elevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/today_label"
                    style="?textAppearanceHeadline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="?defaultMarginMed"
                    android:layout_marginTop="?defaultMarginMed"
                    android:text="@string/today"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/last_update"
                    style="?textAppearanceSubtitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="?defaultMarginMax"
                    android:text="@{DateExtensionsKt.relativeTime(viewModel.today.lastupdatedtime)}"
                    app:layout_constraintLeft_toLeftOf="@id/today_label"
                    app:layout_constraintTop_toBottomOf="@id/today_label" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/t_confirmed"
                    style="?textAppearanceHeadline3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@{viewModel.today.deltaconfirmed}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/last_update"
                    app:layout_constraintWidth_percent="0.33" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/t_recovered"
                    style="?textAppearanceHeadline3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@{viewModel.today.deltarecovered}"
                    app:layout_constraintLeft_toRightOf="@id/t_confirmed"
                    app:layout_constraintTop_toBottomOf="@id/last_update"
                    app:layout_constraintWidth_percent="0.33" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/t_deaths"
                    style="?textAppearanceHeadline3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@{viewModel.today.deltadeaths}"
                    app:layout_constraintLeft_toRightOf="@id/t_recovered"
                    app:layout_constraintTop_toBottomOf="@id/last_update"
                    app:layout_constraintWidth_percent="0.33" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/confirm_label"
                    style="?textAppearanceSubtitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?defaultMarginMin"
                    android:text="@string/confirmed"
                    app:layout_constraintLeft_toLeftOf="@id/t_confirmed"
                    app:layout_constraintRight_toRightOf="@id/t_confirmed"
                    app:layout_constraintTop_toBottomOf="@id/t_confirmed" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="?textAppearanceSubtitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?defaultMarginMin"
                    android:text="@string/recovered"
                    app:layout_constraintLeft_toLeftOf="@id/t_recovered"
                    app:layout_constraintRight_toRightOf="@id/t_recovered"
                    app:layout_constraintTop_toBottomOf="@id/t_recovered" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="?textAppearanceSubtitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?defaultMarginMin"
                    android:text="@string/deaths"
                    app:layout_constraintLeft_toLeftOf="@id/t_deaths"
                    app:layout_constraintRight_toRightOf="@id/t_deaths"
                    app:layout_constraintTop_toBottomOf="@id/t_deaths" />

                <View
                    android:id="@+id/today_divider"
                    style="?dividerHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="?defaultMarginMax"
                    android:background="@color/divider"
                    app:layout_constraintTop_toBottomOf="@id/confirm_label" />

                <View
                    android:id="@+id/center"
                    android:layout_width="?defaultMarginMax"
                    android:layout_height="1dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/today_divider" />

                <info.covid.uicomponents.customview.rings.Rings
                    android:id="@+id/rings"
                    firstText="@{viewModel.deaths}"
                    overAllText="@{viewModel.confirmed}"
                    secondText="@{viewModel.recovered}"
                    thiredText="@{viewModel.active}"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="?defaultMarginMax"
                    app:layout_constraintRight_toLeftOf="@id/center"
                    app:layout_constraintTop_toBottomOf="@id/today_divider"
                    app:rings_inner_first_color="@color/deaths"
                    app:rings_inner_second_color="@color/recovered"
                    app:rings_inner_third_color="@color/active"
                    app:rings_overall_color="@color/confirmed"
                    app:rings_text_size="9sp"
                    app:rings_unfinished_color="@color/divider" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/confirmed"
                    style="?textAppearanceHeadline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?defaultMarginMax"
                    android:drawableStart="@drawable/dot"
                    android:drawablePadding="?defaultMarginMin"
                    android:text="@{Html.fromHtml(@string/confirm_count(viewModel.confirmed))}"
                    app:drawableTint="@color/confirmed"
                    app:layout_constraintLeft_toRightOf="@id/center"
                    app:layout_constraintTop_toTopOf="@id/rings" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/active"
                    style="?textAppearanceHeadline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?defaultMarginMin"
                    android:drawableStart="@drawable/dot"
                    android:drawablePadding="?defaultMarginMin"
                    android:text="@{Html.fromHtml(@string/active_count(viewModel.active))}"
                    app:drawableTint="@color/active"
                    app:layout_constraintLeft_toRightOf="@id/center"
                    app:layout_constraintTop_toBottomOf="@id/confirmed" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/recovered"
                    style="?textAppearanceHeadline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?defaultMarginMin"
                    android:drawableStart="@drawable/dot"
                    android:drawablePadding="?defaultMarginMin"
                    android:text="@{Html.fromHtml(@string/recovered_count(viewModel.recovered))}"
                    app:drawableTint="@color/recovered"
                    app:layout_constraintLeft_toRightOf="@id/center"
                    app:layout_constraintTop_toBottomOf="@id/active" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/deaths"
                    style="?textAppearanceHeadline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?defaultMarginMin"
                    android:drawableStart="@drawable/dot"
                    android:drawablePadding="?defaultMarginMin"
                    android:text="@{Html.fromHtml(@string/death_count(viewModel.deaths))}"
                    app:drawableTint="@color/deaths"
                    app:layout_constraintLeft_toRightOf="@id/center"
                    app:layout_constraintTop_toBottomOf="@id/recovered" />


                <View
                    android:id="@+id/ring_divider"
                    style="?dividerHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="?defaultMarginMax"
                    android:background="@color/divider"
                    app:layout_constraintTop_toBottomOf="@id/rings" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/chart_type"
                    style="?textAppearanceSubtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?defaultMarginMed"
                    android:background="@drawable/state_item_bg"
                    android:drawablePadding="?defaultMarginMin"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingLeft="?defaultMarginMed"
                    android:paddingTop="?defaultMarginMin"
                    android:paddingRight="?defaultMarginMed"
                    android:paddingBottom="?defaultMarginMin"
                    android:text="@string/daily"
                    app:drawableRightCompat="@drawable/ic_down_arrow"
                    app:drawableTint="?android:attr/textColorPrimary"
                    app:layout_constraintLeft_toLeftOf="@id/today_label"
                    app:layout_constraintTop_toBottomOf="@id/ring_divider" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/filters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="?defaultMarginMed"
                    app:checkedChip="@id/days_30"
                    app:layout_constraintBottom_toBottomOf="@id/chart_type"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/chart_type"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/days_30"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_30_days" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/all"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all" />

                </com.google.android.material.chip.ChipGroup>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/daily_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="?defaultMarginMed"
                    app:layout_constraintTop_toBottomOf="@id/chart_type" />

                <View
                    android:id="@+id/daily_chart_divider"
                    style="?dividerHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="?defaultMarginMax"
                    android:background="@color/divider"
                    app:layout_constraintTop_toBottomOf="@id/daily_chart" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/state_chart"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_marginTop="?defaultMarginMax"
                    app:layout_constraintTop_toBottomOf="@id/daily_chart_divider" />

                <View
                    android:id="@+id/pie_chart_divider"
                    style="?dividerHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="?defaultMarginMax"
                    android:background="@color/divider"
                    app:layout_constraintTop_toBottomOf="@id/state_chart" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingVertical="?defaultMarginMax"
            android:paddingLeft="?defaultMarginMed"
            android:paddingRight="?defaultMarginMed"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
